Fix alignment issue site navigation

--- a/assets/src/scss/components/_site-navigation.scss
+++ b/assets/src/scss/components/_site-navigation.scss
@@ -32,10 +32,6 @@
     }
 }
 
-.main-navigation .main-nav .menu {
-    margin-left: 1rem;
-}
-
 @media only screen and (max-width: 768px) {
 
     .main-navigation .main-nav ul li a {
